--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <head>
 <meta http-equiv="Content-Language" content="zh-CN">
-<title>404 ERROR</title>
+<title>404 ERROR | 信息地带新动向 —— Information Zone New Developments</title>
 </head>
 <body>
 	页面不存在异常 ERROR ...
