--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@ layout: profile
 
 <h1>联系我：</h1>
 
-邮箱：icydie(at)qq(dot)com <br/> 
+邮箱：i#iznd.com<br/> 
 <h1>大事记：</h1>
 
 <ul class="index">
 <li>2009-05-26：注册IZND.COM域名，建立个人博客。 </li>
-<li>2012-03-22：入驻GITHUB。</li>
+<li>2012-03-22：几经周转，辗转反复，终于入驻GITHUB。</li>
 </ul>
