--- a/photography.html
+++ b/photography.html
@@ -1,7 +1,7 @@
 ---
 layout: category
-title: Data Structure
+title: Photography
 ---
 
-{% assign category_posts = site.categories.dataStructure %}
+{% assign category_posts = site.categories.photography %}
 {% include category_page.textile %}
